Improved output format with percentage and date format.